﻿Version 7.0
> Completety rewritten in WPF
> Added global exception handler
> Redesigned backup functions
> Auto-detects steam location